--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@angular/common": "~10.0.9",
     "@angular/compiler": "~10.0.9",
     "@angular/core": "~10.0.9",
+    "@angular/fire": "^6.0.2",
     "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~10.0.9",
     "@angular/material": "^10.1.3",
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/router": "~10.0.9",
+    "firebase": "^7.18.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
